Created Model 1 - Decision tree

--- a/ML_Cw.ipynb
+++ b/ML_Cw.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPAZqC0QMuF7GKqg4XeSqCb"
+      "authorship_tag": "ABX9TyNj3p/Etw8xJEtynx8ejrR6"
     },
     "kernelspec": {
       "name": "python3",
@@ -35,7 +35,7 @@
       "metadata": {
         "id": "P_THZlYDcIE_"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -49,14 +49,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 342
         },
         "id": "yUamuJEL4LO8",
-        "outputId": "18b17f5b-88ad-457c-b1c9-9eb749fa1bbb"
+        "outputId": "7e11c610-1ebe-4d8f-a2bb-fb1c126f6b4d"
       },
       "outputs": [
         {
@@ -95,7 +95,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-9c1230b3-825f-4af9-a419-49bcbafeb055\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-33bef72e-2409-4a01-83bb-e7df4a5f8ec9\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -265,7 +265,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9c1230b3-825f-4af9-a419-49bcbafeb055')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-33bef72e-2409-4a01-83bb-e7df4a5f8ec9')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -317,12 +317,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-9c1230b3-825f-4af9-a419-49bcbafeb055 button.colab-df-convert');\n",
+              "        document.querySelector('#df-33bef72e-2409-4a01-83bb-e7df4a5f8ec9 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-9c1230b3-825f-4af9-a419-49bcbafeb055');\n",
+              "        const element = document.querySelector('#df-33bef72e-2409-4a01-83bb-e7df4a5f8ec9');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -342,8 +342,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-726877dd-5197-4e92-ae3f-6ab94bbd619d\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-726877dd-5197-4e92-ae3f-6ab94bbd619d')\"\n",
+              "    <div id=\"df-783e6598-b86c-46cc-9ee0-54e3d7117d0a\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-783e6598-b86c-46cc-9ee0-54e3d7117d0a')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -462,7 +462,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-726877dd-5197-4e92-ae3f-6ab94bbd619d button');\n",
+              "            document.querySelector('#df-783e6598-b86c-46cc-9ee0-54e3d7117d0a button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -478,7 +478,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 3
         }
       ],
       "source": [
@@ -511,9 +511,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xDwSRAoq8ka8",
-        "outputId": "53aefe77-e744-4634-f5d6-354eaa7505ad"
+        "outputId": "64145efb-f029-4d44-d345-9b13184cdde9"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -576,9 +576,9 @@
           "height": 742
         },
         "id": "jtvCacPC9Es7",
-        "outputId": "38416ae6-2f6b-49aa-e05c-f00568e3a2ad"
+        "outputId": "d4e7c25a-8be9-48ad-9fcb-107d9e0cc760"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -720,7 +720,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 6
         }
       ]
     },
@@ -734,12 +734,12 @@
       ],
       "metadata": {
         "id": "5ltq1uJ79K5M",
-        "outputId": "f01f2e53-d27c-4de1-fe11-fd609b28d9ab",
+        "outputId": "763304c4-49d5-4fe9-d90d-9eb25fdee882",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -770,9 +770,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JkT8p1EFYhCU",
-        "outputId": "d90187be-0852-4fcc-fcef-181b45ff01a9"
+        "outputId": "6efa10a1-6df2-413b-b69d-ce0f136a1e05"
       },
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -804,9 +804,9 @@
           "height": 300
         },
         "id": "wA6vfur9YiQs",
-        "outputId": "4f77d778-1c8f-40e3-b057-77e3649ecbc9"
+        "outputId": "71868d5f-c826-4e2d-906c-55f26a223dec"
       },
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -824,7 +824,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-02b56322-02be-45bb-b410-0ad099577a7a\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-e03f045a-ea1b-4010-8834-64a120864677\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -912,7 +912,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-02b56322-02be-45bb-b410-0ad099577a7a')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e03f045a-ea1b-4010-8834-64a120864677')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -964,12 +964,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-02b56322-02be-45bb-b410-0ad099577a7a button.colab-df-convert');\n",
+              "        document.querySelector('#df-e03f045a-ea1b-4010-8834-64a120864677 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-02b56322-02be-45bb-b410-0ad099577a7a');\n",
+              "        const element = document.querySelector('#df-e03f045a-ea1b-4010-8834-64a120864677');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -989,8 +989,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-038a3ee7-f945-4e40-b2b9-c0cc64a0983e\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-038a3ee7-f945-4e40-b2b9-c0cc64a0983e')\"\n",
+              "    <div id=\"df-1ce2da34-fc6d-4555-9d70-0f6fa196eaf3\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-1ce2da34-fc6d-4555-9d70-0f6fa196eaf3')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -1109,7 +1109,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-038a3ee7-f945-4e40-b2b9-c0cc64a0983e button');\n",
+              "            document.querySelector('#df-1ce2da34-fc6d-4555-9d70-0f6fa196eaf3 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -1125,7 +1125,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 9
         }
       ]
     },
@@ -1155,9 +1155,9 @@
           "height": 534
         },
         "id": "Uc3TXslMZSlL",
-        "outputId": "868a11a3-d9ac-4a56-e9ff-0ff186332c6d"
+        "outputId": "d83e575e-e256-41e4-bc60-0128df6b8551"
       },
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1204,9 +1204,9 @@
           "height": 464
         },
         "id": "mZP6Nx9PZmKz",
-        "outputId": "a74b8860-3a14-4144-8f48-fd70558e9c57"
+        "outputId": "5b5f66bd-7fda-4950-f0be-6adfbfab9677"
       },
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1235,9 +1235,9 @@
           "height": 507
         },
         "id": "3_tlZSETaAVh",
-        "outputId": "24128fab-e1e2-4a2e-95d8-238b68c31433"
+        "outputId": "e565c699-7db4-4763-b086-4bd4fe25f249"
       },
-      "execution_count": 11,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1265,9 +1265,9 @@
           "height": 464
         },
         "id": "KFlu-KitaCjL",
-        "outputId": "46af03bf-ce88-4de9-9896-4415f3f725d6"
+        "outputId": "d48b630e-6745-4f73-b8aa-58ceb2b5def4"
       },
-      "execution_count": 12,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1305,9 +1305,9 @@
           "height": 400
         },
         "id": "S8-VMKNgabD4",
-        "outputId": "9232fd9a-eb58-4694-ef57-41669e0ecd21"
+        "outputId": "d69625ea-aa97-463b-fd36-c2b3d13f252b"
       },
-      "execution_count": 13,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1336,9 +1336,9 @@
           "height": 406
         },
         "id": "gdqxPV0xbRDF",
-        "outputId": "9fbb36ef-ce6d-4c6d-cab6-25b5f1e74322"
+        "outputId": "ca25fa01-cc94-499c-9e53-86931b0941f4"
       },
-      "execution_count": 14,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1378,9 +1378,9 @@
           "height": 475
         },
         "id": "TPK4W4IJbwmC",
-        "outputId": "0d020205-171e-45c0-8c60-d3c15e763d38"
+        "outputId": "a92521f2-7a5a-438f-97e0-138fbc7d3c4a"
       },
-      "execution_count": 15,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1400,7 +1400,7 @@
       "metadata": {
         "id": "MrhoeLSjxo9c"
       },
-      "execution_count": 15,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -1440,7 +1440,7 @@
       "metadata": {
         "id": "wC8sSxzVxxay"
       },
-      "execution_count": 16,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -1468,7 +1468,7 @@
           "height": 342
         },
         "id": "pPBX7GFRyVDf",
-        "outputId": "bdc8095c-3f40-4820-ebad-d75e13e675dc"
+        "outputId": "fb38ed3b-57ba-4aa8-e630-56e51114ef09"
       },
       "execution_count": 18,
       "outputs": [
@@ -1508,7 +1508,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-b34d3ef8-95c8-462f-bfef-cc00d0e1193b\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-e995a7a5-cb23-4aff-a158-178cfd532d6b\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1678,7 +1678,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b34d3ef8-95c8-462f-bfef-cc00d0e1193b')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e995a7a5-cb23-4aff-a158-178cfd532d6b')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1730,12 +1730,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-b34d3ef8-95c8-462f-bfef-cc00d0e1193b button.colab-df-convert');\n",
+              "        document.querySelector('#df-e995a7a5-cb23-4aff-a158-178cfd532d6b button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-b34d3ef8-95c8-462f-bfef-cc00d0e1193b');\n",
+              "        const element = document.querySelector('#df-e995a7a5-cb23-4aff-a158-178cfd532d6b');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1755,8 +1755,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-61c4a614-7266-4557-8c62-77617262b0b1\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-61c4a614-7266-4557-8c62-77617262b0b1')\"\n",
+              "    <div id=\"df-9dc434b3-c8d1-405e-8b19-370eeaf2795a\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-9dc434b3-c8d1-405e-8b19-370eeaf2795a')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -1875,7 +1875,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-61c4a614-7266-4557-8c62-77617262b0b1 button');\n",
+              "            document.querySelector('#df-9dc434b3-c8d1-405e-8b19-370eeaf2795a button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -1966,8 +1966,58 @@
       "metadata": {
         "id": "gAaQmxgTzFYr"
       },
-      "execution_count": 22,
+      "execution_count": 21,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "MODEL 1 – DECISION TREE"
+      ],
+      "metadata": {
+        "id": "JtxKJzZ3Gl_D"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dt_model = Pipeline([\n",
+        "    (\"prep\", preprocess_tree),\n",
+        "    (\"clf\", DecisionTreeClassifier(max_depth=6, criterion=\"gini\"))\n",
+        "])\n",
+        "\n",
+        "dt_model.fit(X_train, y_train)\n",
+        "y_pred_dt = dt_model.predict(X_test)\n",
+        "\n",
+        "print(\"Decision Tree Accuracy:\", accuracy_score(y_test, y_pred_dt))\n",
+        "print(classification_report(y_test, y_pred_dt))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PMdQbrZ9Gqwj",
+        "outputId": "16ffaacd-11d1-4263-d726-45d624b777fb"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Decision Tree Accuracy: 0.7896233120113717\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.85      0.87      0.86      1033\n",
+            "           1       0.61      0.56      0.59       374\n",
+            "\n",
+            "    accuracy                           0.79      1407\n",
+            "   macro avg       0.73      0.72      0.72      1407\n",
+            "weighted avg       0.78      0.79      0.79      1407\n",
+            "\n"
+          ]
+        }
+      ]
     }
   ]
 }
