ROC-AUC for Decision Tree

--- a/ML_Cw.ipynb
+++ b/ML_Cw.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNj3p/Etw8xJEtynx8ejrR6"
+      "authorship_tag": "ABX9TyMVROYOlunlgv5AoD92nAap"
     },
     "kernelspec": {
       "name": "python3",
@@ -2018,6 +2018,49 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "ROC-AUC for Decision Tree"
+      ],
+      "metadata": {
+        "id": "efho-uo_G8m-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import roc_curve, auc\n",
+        "\n",
+        "y_prob_dt = dt_model.predict_proba(X_test)[:,1]\n",
+        "auc_dt = roc_auc_score(y_test, y_prob_dt)\n",
+        "print(\"Decision Tree AUC:\", auc_dt)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Nj97cco7HEEP",
+        "outputId": "6e988c66-9479-473b-f07b-9959a095e4d2"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Decision Tree AUC: 0.8276436421616081\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "4ENb5egUHHxF"
+      }
     }
   ]
 }
