Write code for Model comparison

--- a/ML_Cw.ipynb
+++ b/ML_Cw.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOTbWlsHyLjtdKDrXFd4gF2"
+      "authorship_tag": "ABX9TyONAzXkVTLgqOpNyHoZZgMO"
     },
     "kernelspec": {
       "name": "python3",
@@ -2318,6 +2318,44 @@
             "weighted avg       0.78      0.75      0.76      1407\n",
             "\n",
             "\u001b[1m44/44\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 10ms/step\n",
+            "ANN AUC: 0.8213901154935265\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "MODEL COMPARISON"
+      ],
+      "metadata": {
+        "id": "To0R1VSCJUnc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"DECISION TREE ACC:\", accuracy_score(y_test, y_pred_dt))\n",
+        "print(\"ANN ACC:\", accuracy_score(y_test, y_pred_ann))\n",
+        "print(\"DECISION TREE AUC:\", auc_dt)\n",
+        "print(\"ANN AUC:\", roc_auc_score(y_test, y_prob_ann))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eDauOqvMJafa",
+        "outputId": "e072823e-5f8b-4767-bb6a-4e2bc0a3aba5"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "DECISION TREE ACC: 0.7896233120113717\n",
+            "ANN ACC: 0.7505330490405118\n",
+            "DECISION TREE AUC: 0.8276436421616081\n",
             "ANN AUC: 0.8213901154935265\n"
           ]
         }
